--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css">
 
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
   <script type="text/javascript">
     window.onunload = function() {
       var tag = document.getElementById("header_switcher");
@@ -46,12 +50,19 @@
 
 </head>
 
-<body>  
+<body> 
+
+  <!--[if lt IE 9]>
+  <div class="deprecated_browser">
+    Achtung: Sie benutzen eine veraltete Version des Internet Explorer.<br/>Die Seite wird mit hoher Wahrscheinlichkeit nicht fehlerfrei dargestellt!  
+  </div>  
+  <![endif]-->
 
   <input type="checkbox" id="header_switcher" />
   <header>       
     {% include header.html %}
   </header>   
+
 
   <div id="container">                
 
