--- a/css/main.scss
+++ b/css/main.scss
@@ -24,13 +24,14 @@ body, html {
 
 body {
     background-color: $colBackground;
+    display: block;
     font-size: 12pt;
     min-width: 300px;
     overflow-y: scroll;    
     width: 100%;
 }
 
-#container {    
+#container {        
     margin: 0 auto;
     width: 100%;
     max-width: 960px;
@@ -56,20 +57,23 @@ aside {
     max-width: 300px;    
 }
 
-footer {
-    border-top: 1px solid $colDark;
-    display: block;    
-    margin: 2em 2em;
-    padding-top: 1em;
+footer {      
+    border-top: 1px solid $colDark;    
+    margin: 2em 2em 0em;;    
+    padding-bottom: 2em;
+    padding-top: 1em;    
     text-align: center;    
 }
 
-header {        
+header {     
+    background-color: $colDark;   
     padding-top: $logoHeight;
     position: relative;
     top: -2px;    
     @include vendor(transition, none 0.5s);
-    width: 100%;   
+    width: 100%;  
+
+    input { display: none; } 
 
     table {        
         border-bottom: 1px solid $colDark;        
@@ -77,7 +81,8 @@ header {
         top: 0;        
         width: 100%;        
 
-        td {                                     
+        td {           
+            background-color: $colDark;
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -168,6 +173,8 @@ header {
     }
 }
 
+#header_switcher { display: none; }
+
 #header_switcher:checked + header {
     margin-top: -$logoHeight;
 
@@ -179,12 +186,12 @@ header {
 
 #header_switcher:checked + header #hide_show:after { content: "\f431"; }    
 
-main {  
+main {        
     margin: 0 2em;
 }
 
 nav {
-    margin: 2em 2em 1em;    
+    margin: 2em 2em 1em;
 
     a {     
         border: none;
@@ -217,6 +224,8 @@ nav {
     a:hover:before,
     input[id^="entry"]:checked + a:before { opacity: 1; }
 
+    input { display: none; }
+
     input[id^="entry"]:checked + a { color: $colDark; }
 
     &:after {
@@ -225,6 +234,7 @@ nav {
         display: block;
     }
 }
+
 
 
 
