--- a/css/_tags.scss
+++ b/css/_tags.scss
@@ -14,8 +14,8 @@ address {
 }
 
 em {
-    font-style: italic;
-    font-weight: normal;
+    font-style: normal;
+    font-weight: bold;
 }
 
 h1 {
@@ -48,6 +48,45 @@ p {
 
 small {
 	font-size: 0.83em;
+}
+
+main {
+
+	code {
+		background-color: #eef;
+		border: 1px solid $colDark;		
+		padding: 0 0.2em;
+	}
+
+	img {
+		@include vendor(box-shadow, 0 0 1em $colDark);
+		display: block;
+		margin: 2em auto;
+		max-width: 100%;		
+	}
+
+	table {
+		margin: 0 auto 1em;
+		text-align: center;
+
+		td, th {
+			border: 2px solid $colBackground;
+			padding: 0.5em;			
+		}
+
+		th {
+			font-weight: bold;		
+		}
+
+		tr:nth-child(even) {
+			background-color: $colLight;
+		}
+
+		tr:nth-child(odd) {
+			background-color: $colMiddle;
+		}
+	}
+
 }
 
 ul {
