--- a/css/main.css
+++ b/css/main.css
@@ -175,8 +175,8 @@ address {
   margin-bottom: 1em; }
 
 em {
-  font-style: italic;
-  font-weight: normal; }
+  font-style: normal;
+  font-weight: bold; }
 
 h1 {
   display: block;
@@ -205,6 +205,32 @@ p {
 
 small {
   font-size: 0.83em; }
+
+main code {
+  background-color: #eef;
+  border: 1px solid black;
+  padding: 0 0.2em; }
+main img {
+  -ms-box-shadow: 0 0 1em black;
+  -moz-box-shadow: 0 0 1em black;
+  -o-box-shadow: 0 0 1em black;
+  -webkit-box-shadow: 0 0 1em black;
+  box-shadow: 0 0 1em black;
+  display: block;
+  margin: 2em auto;
+  max-width: 100%; }
+main table {
+  margin: 0 auto 1em;
+  text-align: center; }
+  main table td, main table th {
+    border: 2px solid ivory;
+    padding: 0.5em; }
+  main table th {
+    font-weight: bold; }
+  main table tr:nth-child(even) {
+    background-color: #d6dbd6; }
+  main table tr:nth-child(odd) {
+    background-color: lightslategrey; }
 
 ul {
   margin-left: 1.5em;
