--- a/css/main.css
+++ b/css/main.css
@@ -215,6 +215,8 @@ main code {
   background-color: #eef;
   border: 1px solid black;
   padding: 0 0.2em; }
+main .highlight code {
+  background-color: transparent; }
 main img {
   -ms-box-shadow: 0 0 1em black;
   -moz-box-shadow: 0 0 1em black;
@@ -237,13 +239,14 @@ main table {
   main table tr:nth-child(odd) {
     background-color: lightslategrey; }
 
-ul {
+ol, ul {
+  list-style-position: inside;
   margin-left: 1.5em;
   margin-bottom: 1em; }
-  ul li {
+  ol li, ul li {
     line-height: 1.5em;
     margin-bottom: 0.5em; }
-    ul li:last-child {
+    ol li:last-child, ul li:last-child {
       margin-bottom: 0; }
 
 ul.no_bullet {
