--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,16 @@ img.left {
   margin-right: 1em;
   margin-bottom: 0.5em; }
 
+object {
+  -ms-box-shadow: 0 0 1em black;
+  -moz-box-shadow: 0 0 1em black;
+  -o-box-shadow: 0 0 1em black;
+  -webkit-box-shadow: 0 0 1em black;
+  box-shadow: 0 0 1em black;
+  display: block;
+  margin: 2em auto;
+  max-width: 100%; }
+
 p {
   line-height: 1.5em;
   margin-bottom: 1em; }
